Fixed java 11 test case deprecation warnings.